add more tests for storage
